--- a/packages/mini-app/package.json
+++ b/packages/mini-app/package.json
@@ -1,37 +1,70 @@
 {
-  "name": "my-minikit-app",
+  "name": "flip",
   "version": "0.1.0",
-  "private": true,
+  "type": "module",
+  "private": false,
+  "access": "public",
+  "exports": {
+    ".": {
+      "types": "./index.d.ts",
+      "import": "./bin/init.js"
+    }
+  },
+  "types": "./index.d.ts",
   "scripts": {
-    "dev": "next dev",
+    "dev": "node scripts/dev.js",
     "build": "next build",
+    "build:raw": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "deploy:vercel": "node --loader ts-node/esm scripts/deploy.ts",
+    "deploy:raw": "vercel --prod",
+    "cleanup": "node scripts/cleanup.js"
   },
   "dependencies": {
-    "@coinbase/onchainkit": "latest",
-    "@farcaster/frame-sdk": "^0.1.8",
-    "@upstash/redis": "^1.34.4",
-    "next": "^15.3.3",
-    "react": "^18",
-    "react-dom": "^18",
-    "@tanstack/react-query": "^5",
-    "viem": "^2.27.2",
-    "wagmi": "^2.16.0"
+    "@farcaster/auth-client": ">=0.3.0 <1.0.0",
+    "@farcaster/miniapp-node": ">=0.1.5 <1.0.0",
+    "@farcaster/miniapp-sdk": ">=0.1.6 <1.0.0",
+    "@farcaster/miniapp-wagmi-connector": "^1.0.0",
+    "@farcaster/mini-app-solana": ">=0.0.17 <1.0.0",
+    "@farcaster/quick-auth": ">=0.0.7 <1.0.0",
+    "@neynar/react": "^1.2.8",
+    "@radix-ui/react-label": "^2.1.1",
+    "@solana/wallet-adapter-react": "^0.15.38",
+    "@tanstack/react-query": "^5.61.0",
+    "@upstash/redis": "^1.34.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "dotenv": "^16.4.7",
+    "lucide-react": "^0.469.0",
+    "mipd": "^0.0.7",
+    "next": "^15",
+    "react": "^19",
+    "react-dom": "^19",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7",
+    "viem": "^2.23.6",
+    "wagmi": "^2.14.12",
+    "zod": "^3.24.2",
+    "siwe": "^3.0.0",
+    "@neynar/nodejs-sdk": "^2.19.0",
+    "@farcaster/auth-kit": ">=0.6.0 <1.0.0",
+    "next-auth": "^4.24.11"
   },
   "devDependencies": {
-    "@types/node": "^22",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/inquirer": "^9.0.8",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "@vercel/sdk": "^1.9.0",
+    "crypto": "^1.0.1",
     "eslint": "^8",
-    "eslint-config-next": "15.3.3",
-    "eslint-config-prettier": "^10.1.1",
-    "eslint-plugin-prettier": "^5.2.3",
-    "eslint-plugin-react": "^7.37.4",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "prettier": "^3.5.3",
+    "eslint-config-next": "15.0.3",
+    "localtunnel": "^2.0.2",
+    "pino-pretty": "^13.0.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5"
   }
 }
