chore: add autoprefixer and include screens directory in tailwind content paths

--- a/packages/mini-app/package.json
+++ b/packages/mini-app/package.json
@@ -58,6 +58,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@vercel/sdk": "^1.9.0",
+    "autoprefixer": "^10.4.21",
     "crypto": "^1.0.1",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
