--- a/packages/mini-app/package.json
+++ b/packages/mini-app/package.json
@@ -31,6 +31,7 @@
     "@farcaster/quick-auth": ">=0.0.7 <1.0.0",
     "@neynar/nodejs-sdk": "^2.19.0",
     "@neynar/react": "^1.2.8",
+    "@privy-io/react-auth": "^2.21.2",
     "@radix-ui/react-label": "^2.1.1",
     "@solana/wallet-adapter-react": "^0.15.38",
     "@tanstack/react-query": "^5.61.0",
