--- a/.gitmodules
+++ b/.gitmodules
@@ -4,11 +4,16 @@
 [submodule "packages/contracts/lib/v4-core"]
 	path = packages/contracts/lib/v4-core
 	url = https://github.com/Uniswap/v4-core
-[submodule "packages/contracts/lib/zora-protocol"]
-	path = packages/contracts/lib/zora-protocol
-	url = https://github.com/ourzora/zora-protocol
 [submodule "packages/contracts/lib/prb-math"]
 	path = packages/contracts/lib/prb-math
 	url = https://github.com/PaulRBerg/prb-math
 [submodule "lib/prb-math"]
 	branch = release-v4
+[submodule "packages/contracts/lib/zora-protocol"]
+	path = packages/contracts/lib/zora-protocol
+	url = https://github.com/ourzora/zora-protocol
+[submodule "lib/zora-protocol"]
+	branch = main
+[submodule "packages/contracts/lib/v4-periphery"]
+	path = packages/contracts/lib/v4-periphery
+	url = https://github.com/Uniswap/v4-periphery
