--- a/packages/mini-app/package.json
+++ b/packages/mini-app/package.json
@@ -19,7 +19,10 @@
     "lint": "next lint",
     "deploy:vercel": "node --loader ts-node/esm scripts/deploy.ts",
     "deploy:raw": "vercel --prod",
-    "cleanup": "node scripts/cleanup.js"
+    "cleanup": "node scripts/cleanup.js",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
     "@farcaster/auth-client": ">=0.3.0 <1.0.0",
@@ -35,15 +38,19 @@
     "@radix-ui/react-label": "^2.1.1",
     "@solana/wallet-adapter-react": "^0.15.38",
     "@tanstack/react-query": "^5.61.0",
+    "@types/pg": "^8.15.5",
     "@upstash/redis": "^1.34.3",
     "@zoralabs/coins-sdk": "^0.3.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
+    "drizzle-kit": "^0.31.4",
+    "drizzle-orm": "^0.44.4",
     "lucide-react": "^0.469.0",
     "mipd": "^0.0.7",
     "next": "^15",
     "next-auth": "^4.24.11",
+    "pg": "^8.16.3",
     "react": "^19",
     "react-dom": "^19",
     "siwe": "^3.0.0",
